updated by adding some of the tech skills

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         <div class="bio animate__animated animate__shakeX">
           <h2 class="bio-title">About Me</h2>
           <p class="bio-text">
-            Passionate about solving complex problems,upskilling, inovation, critical thinking, Artificial inteligence. 
-            I enjoy learning on the go however, eversince I met python I fell in love with solving problems with code. 
+            I am Software Engineer Passionate about solving complex problems,upskilling, inovation, critical thinking, Artificial inteligence. 
+            I enjoy learning on the go however, eversince I met python I fell in love with solving problems with code.
+            <strong>Python, JavaScript, C, C++, React, React Native, DJango, Flask, Dev Ops, Project Management.</strong> 
           </p>
         </div>
     </section>
